lib_LIBRARIES = libgstreamer-studio-core.a
libgstreamer_studio_core_a_SOURCES = logger.cpp \
										plugininfo.cpp \
										propertycontainer.cpp \
										baseproperty.cpp \
										gstreamercontroller.cpp \
										controller.cpp

libgstreamer_studio_core_a_CPPFLAGS = $(GSTREAMERMM_CFLAGS) -I../
